# A2A-Agentic-Code-Reviewer

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
examples/: sample_change.diff
src/a2a_review/: __init__.py
src/a2a_review/agents/: __init__.py
src/a2a_review/agents/orchestrator/: __init__.py  agent_card.py  executor.py  server.py
src/a2a_review/agents/security/: __init__.py  agent_card.py  executor.py  server.py
src/a2a_review/agents/style/: __init__.py  agent_card.py  executor.py  server.py
src/a2a_review/client/: __init__.py  cli.py
src/a2a_review/common/: __init__.py  a2a_client.py  config.py  llm.py  schemas.py
